# rust-axum-askama-seed

./: .gitignore  Cargo.toml  GithubActions.md  Good Coding Practices.md  Links.md  README.md  logging_config.yaml
entrypoint/: Cargo.toml
entrypoint/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/app/: app.rs  envs.rs  error.rs  mod.rs
server/src/controlers/: api.rs
server/src/controllers/: pages.rs
server/src/ui/: homepage.rs  mod.rs
server/templates/: base.html  chartjs.html  error.html  homepage.html
server/templates/fomantic/: charts.html  fomantic-dashboard.html  tables.html
