[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace packages
log = {workspace = true}
tokio = { workspace = true, features = ["full"] }

# Crate packages
axum = "0.8.3"
lazy_static = "1.5.0"
rust-embed = {version = "8.6.0", features =["interpolate-folder-path"]}
askama = "0.13.0"
axum-embed = "0.1.0"
